# conduit

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
conduit/: __init__.py  cli.py  config.py  cost.py  errors.py  gateway.py  ledger.py  observability.py  ratelimit.py  router.py  tokens.py  types.py
conduit/cache/: __init__.py  base.py  exact.py  semantic.py
conduit/providers/: __init__.py  base.py  echo.py  openai.py  registry.py
conduit/server/: app.py  deps.py  schemas.py
docs/: architecture.md
examples/: http_client.py  quickstart.py
tests/: conftest.py  test_api.py  test_cache.py  test_cli.py  test_config.py  test_cost.py  test_gateway.py  test_ledger.py  test_observability.py  test_providers.py  test_ratelimit.py  test_router.py  test_tokens.py
