[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "conduit-llm"
version = "0.1.0"
description = "A self-hostable LLM gateway — OpenAI-compatible routing with retries, provider fallback, rate limiting, semantic caching, and cost tracking. Pure Python, no external services."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Saad Asif", email = "saadasif7a@gmail.com" }]
keywords = [
    "llm",
    "gateway",
    "proxy",
    "openai",
    "rate-limiting",
    "semantic-cache",
    "fastapi",
    "ai-infrastructure",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: Proxy Servers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "respx>=0.21",
    "ruff>=0.3",
    "mypy>=1.9",
]

[project.scripts]
conduit = "conduit.cli:main"

[project.urls]
Homepage = "https://github.com/SaadAsif-NU/conduit"
Repository = "https://github.com/SaadAsif-NU/conduit"

[tool.hatch.build.targets.wheel]
packages = ["conduit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "C4", "ASYNC"]
ignore = ["E501"]

[tool.mypy]
# Target 3.12 so mypy parses modern typed-stdlib/stub syntax; runtime support
# down to 3.10 is enforced by the test matrix.
python_version = "3.12"
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true
files = ["conduit"]
